package maidsafe.lifestuff;
import "maidsafe/lifestuff/lifestuff_messages.proto";

message MCID {
  required bytes encrypted_mmid = 1;
  required bytes encrypted_public_username = 2;
  required bytes signature = 3;
}

message MMID {
  message Message {
    required int32 type = 1;
    required bytes id = 2;
    optional bytes parent_id = 3;
    required bytes sender_public_username = 4;
    optional bytes subject = 5;
    repeated bytes content = 6;
  }
  required bytes public_key = 1;
  required bytes signature = 2;
  repeated Encrypted encrypted_message = 3;
}

message MSID {
  required bytes public_key = 1;
  required bytes signature = 2;
  required bool accepts_new_contacts = 3;
  repeated bytes encrypted_mcid = 4;
}
